# controller/adminActions/actionInint.go
@@ -20,10 +20,10 @@ var JwtAuth *midJWT.GinJWTMiddleware = &midJWT.GinJWTMiddleware{
 	PayloadFunc:       userPayloadFunc,
 	IdentityHandler:   newIdentityHandler,
 	IdentityKey:       identityKey,
-	TokenLookup:       "header: Authorization, query: token, cookie: jwt",
+	TokenLookup:       "header: Authorization",
 	TokenHeadName:     "Bearer",
 	TimeFunc:          time.Now,
-	SendCookie:        true,
+	SendCookie:        false,
 	CookieMaxAge:      0,
 	SecureCookie:      false,
 	CookieHTTPOnly:    true,
