# controller/adminActions/login.go
@@ -3,6 +3,7 @@ package adminActions
 import (
 	"MyServer/database/adminDB"
 	midJWT "MyServer/middleware"
+	"fmt"
 	"github.com/dgrijalva/jwt-go"
 	"github.com/gin-gonic/gin"
 	"net/http"
@@ -44,7 +45,7 @@ func userLoginAuthenticator(ctx *gin.Context) (interface{}, error) {
 
 	username := reqBodyVal.Username
 	password := reqBodyVal.Password
-
+	fmt.Println(reqBodyVal)
 	//  在数据库中 ，查询，判断 username 和 password 是否正确
 	flag, err := adminDB.CheckAuth(username, password)
 	if !flag {
@@ -147,15 +148,16 @@ func AllUserAuthorizator(data interface{}, ctx *gin.Context) bool {
 
 // @Summary 登录
 // @Description 验证用户登录是否成功
-// @Tags 用户信息
+// @Tags 校验
 // @Security csrf-token
 // @param csrf-token header string true "X-CSRF-TOKEN"
+// @param body query  UserRequsetBody true "request body"
 // @Accept  json
 // @Produce  json
-// @Param id path int true "ID"    //url参数：（name；参数类型[query(?id=),path(/123)]；数据类型；required；参数描述）
-// @Success 200 {string} json "{"errcode":"200","data":"[{"expId":"111","expName":"TensorFlow","expType":"TensorFlow","expTrade":"制造业","expScene":"零售","expRemark":"零售零售零售零售","expDeg":"2","expCreateUser":"tfg"}]","msg":""}"
-// @Failure 400 {string} json "{"errcode":"400","data":"","msg":"error......"}"
-// @Router /login [get]
+// @Success 200 {string} json "{"status":200,"data":{},"message":"ok"}"
+// @Failure 400 {string} json "{"status":400,"data":{},"message":"bad request"}"
+// @Failure 401 {string} json "{"status":401,"data":{},"message":"forbidden"}"
+// @Router /admin/login [get]
 func LoginAction(ctx *gin.Context) {
 
 	//  如果 对用户名密码没有验证，则返回 500 错误
@@ -168,6 +170,7 @@ func LoginAction(ctx *gin.Context) {
 	//  需要将 验证后的 数据 写入 到token 中
 	data, err := JwtAuth.Authenticator(ctx)
 	if err != nil {
+		fmt.Println(err)
 		JwtAuth.Unauthorized(ctx, http.StatusUnauthorized, JwtAuth.HTTPStatusMessageFunc(err, ctx))
 		return
 	}
@@ -228,60 +231,3 @@ func LoginAction(ctx *gin.Context) {
 	//  如果 不设置 cookie ，则默认 也会 将 token  作为 response data 返回
 	JwtAuth.LoginResponse(ctx, http.StatusOK, tokenStr, expire)
 }
-
-//func LoginAction(ctx *gin.Context) {
-//	app.Logger.Info("log success", zap.String("url", ctx.Request.URL.Host))
-//	app.Logger.Debug("debug success")
-//	app.Logger.Error("Error success")
-//	app.Logger.Warn("Warn success")
-//
-//	session := sessions.Default(ctx)
-//
-//	//var count int
-//
-//	v := session.Get("count")
-//	fmt.Println(v)
-//	fmt.Printf("type : %T\n", v)
-//	fmt.Println(ctx.HandlerName())
-//	session.Set("count", "gsh")
-//	_ = session.Save()
-//	//
-//	//if v == nil {
-//	//	count = 0
-//	//} else {
-//	//	count = v.(int)
-//	//	count += 1
-//	//}
-//	//session.Set("count", "test")
-//	////session.Set("count", 0)
-//	//err := session.Save()
-//	//if err != nil {
-//	//	errMsg := fmt.Sprintf("Session Err: %v", err)
-//	//		app.Logger.Error(errMsg)
-//	//}
-//	//
-//	type User = adminDB.UserInfo
-//
-//	var user *User = &User{Name: "gsh", Password: "123"}
-//
-//	var loginInterface adminDB.AdminDBOperation
-//	//
-//	loginInterface = user
-//	//  增
-//
-//	//var out []*adminDB.UserInfo
-//	//err = loginInterface.QueryAllByName(out)
-//	//fmt.Println(out)
-//	//
-//	err := loginInterface.Delete(false)
-//	if err != nil && err.Code == 102 {
-//		app.Logger.Error("Mysql Err: ", zap.Int("Code", err.Code), zap.String("errType", err.Type), zap.String("Msg", err.Msg))
-//		//panic(err)
-//	}
-//
-//	//err := loginInterface.Update(map[string]interface{}{"name": "hello", "password": "1234"}, "name = ?", user.Name)
-//
-//	ctx.JSON(http.StatusOK, gin.H{
-//		"message": "OK",
-//	})
-//}
