# router/registerRouteInit.go
@@ -8,19 +8,19 @@ import (
 func init() {
 	appInstance := app.Application()
 
-	v1 := appInstance.Router.Group("v1")
+	v1 := appInstance.Router.Group("/v1")
 	{
-		v1.GET("getCSRF", adminActions.GetCsrfTokenAction)
-		admin := v1.Group("admin")
+		v1.GET("/getCSRF", adminActions.GetCsrfTokenAction)
+		admin := v1.Group("/admin")
 		{
-			admin.POST("login", adminActions.LoginAction)
-			auth := admin.Group("auth")
+			admin.POST("/login", adminActions.LoginAction)
+			auth := admin.Group("/auth")
 			{
-				auth.GET("/refresh_token", adminActions.JwtAuth.RefreshTokenHandler)
+				auth.GET("/refresh_token", adminActions.RefreshTokenHandler)
 			}
 			auth.Use(adminActions.JwtAuth.MiddlewareUseFunc())
 			{
-
+				auth.GET("/user", adminActions.UserGet)
 			}
 		}
 	}
